Fix width of .success-box on mobile view

--- a/styles.css
+++ b/styles.css
@@ -912,5 +912,9 @@ footer ul {
         background-color: rgba(0, 0, 0, 0);
     }
 
+    .success-box {
+        width: 80%;
+    }
+
 
 }
